EIP1-11113: import register checker API codebase into ems integration API project that has merged db migrations already in it; resolve issues arising from address entity field differences between APIs